testing and fix